--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,27 @@
-/* You can add global styles to this file, and also import other style files */
+html, body {
+  height: 100%;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+}
+
+
+app-root {
+  display: flex;
+  flex-direction: column;
+  min-height: 100%;
+}
+
+
+.wrapper {
+  padding-top: 38px;
+  flex: 1;
+}
+
+
+app-footer {
+  background-color: #f1f1f1;
+  text-align: center;
+  padding: 10px 0;
+  border-top: 1px solid #ccc;
+}
