--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,8 +1,8 @@
 <nav class="menu">
   <ul class="menu-list">
-    <li><a routerLink="/" routerLinkActive="active">Home</a></li>
-    <li><a routerLink="/about">About</a></li>
-    <li><a routerLink="/services">Services</a></li>
-    <li><a routerLink="/contact">Contact</a></li>
+    <li><a routerLink="/" routerLinkActive="active">{{'header.home' | translate}}</a></li>
+    <li><a routerLink="/about">{{'header.about' | translate}}</a></li>
+    <li><a routerLink="/services">{{'header.services' | translate}}</a></li>
+    <li><a routerLink="/contact">{{'header.contacts' | translate}}</a></li>
   </ul>
 </nav>
