--- a/src/app/components/landing-page/landing-page.component.html
+++ b/src/app/components/landing-page/landing-page.component.html
@@ -1,10 +1,10 @@
 <header>
-  <h1>Welcome to IT Systems</h1>
-  <p>Your trusted partner in IT development.</p>
-  <button>Contact Us</button>
+  <h1>{{'landing_page.welcome' | translate}} {{ 'company_name' | translate }}</h1>
+  <p>{{'landing_page.trusted_partner' | translate}}</p>
+  <button>{{'contacts.contacts_us' | translate}}</button>
 </header>
 <section>
-  <h2>About Us</h2>
-  <p>We provide cutting-edge solutions in .NET, Angular, SQL, and Azure.</p>
+  <h2>{{'about.title' | translate}}</h2>
+  <p>{{'about.description' | translate}}</p>
 </section>
 
