--- a/src/styles.css
+++ b/src/styles.css
@@ -25,3 +25,14 @@ app-footer {
   padding: 10px 0;
   border-top: 1px solid #ccc;
 }
+
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  padding: 0;
+  overflow: hidden;
+  clip: rect(0 0 0 0);
+  border: 0;
+}
